fixed small alignment issue in popular movies title

--- a/components/PopularMovies/styles.module.scss
+++ b/components/PopularMovies/styles.module.scss
@@ -98,6 +98,7 @@
   align-items: center;
   opacity: 0;
   transition: opacity 150ms ease-in-out;
+  height: 22px;
 
   &.visible {
     opacity: 1;
